# kanjisho-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  fetch.sh  package-lock.json
.github/workflows/: build.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/data/: kanji.rs
backend/src/kanji/: mod.rs
backend/src/kanjidic/: data.rs  mod.rs
crates/jmdict/: Cargo.toml
crates/jmdict/src/: entry.rs
crates/jmdict/src/entry/: de.rs
crates/serde-webdoc/: Cargo.toml
crates/serde-webdoc/src/: de.rs  error.rs  lib.rs
crates/serde-webdoc/src/de/: iter.rs  macros.rs  tests.rs
crates/xml/: Cargo.toml  README.md
crates/xml/src/: de.rs  lib.rs  read.rs  validation.rs  xml.rs
crates/xml/src/read/: bytes.rs  doctype.rs  macros.rs
crates/xml/tests/: read.rs
kradk/: Cargo.toml
kradk/src/: krad.rs  lib.rs  radk.rs
parse/: Cargo.toml
parse/src/: jmdict.rs  kanjidic.rs  lib.rs
populate/: Cargo.toml
populate/src/: main.rs
populate/src/db/: json.rs  kanji.rs  mod.rs  mongo.rs  redis.rs
web/: Cargo.toml
web/src/: main.rs
