[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
redis = "0.22.1"
serde_json = "1.0.87"
parse = { path = "../parse" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["full"] }

