[package]
name = "populate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.3.1", features = ["tokio-sync"] }
parse = { path = "../parse" }
redis = { version = "0.22.1" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
