# You must change these to your own details.
[package]
authors = ["Andrew Duda <dudanian@gmail.com>"]
description = "Serde deserializer for WASM Documents"
edition = "2018"
name = "jmdict"
readme = "README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0.115"
serde-webdoc = {path = "../serde-webdoc"}
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4.17"


[dependencies.web-sys]
features = [
  "console",
  "Document",
  "Element",
  "DomParser",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "SupportedType",
  "Window",
]
version = "0.3.44"

[dev-dependencies]
wasm-bindgen-test = "0.3.17"

[dev-dependencies.serde]
features = ["derive"]
